--- a/AndroidTrivia/build.gradle
+++ b/AndroidTrivia/build.gradle
@@ -17,6 +17,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
+        nav_version = '2.4.2'
         kotlin_version = '1.6.20'
         archLifecycleVersion = '1.1.1'
         gradleVersion = '7.0.4'
