--- a/GuessTheWord/app/build.gradle
+++ b/GuessTheWord/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
 
     //ViewModel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
 }
