--- a/MarsRealEstate/build.gradle
+++ b/MarsRealEstate/build.gradle
@@ -6,33 +6,33 @@ buildscript {
         // navigation where the versions of the plugin needs to be the same as the version of the
         // library defined in the app Gradle file
         
-        version_android_gradle_plugin = '4.0.1'
-        version_core = "1.3.1"
-        version_constraint_layout = "1.1.3"
+        version_android_gradle_plugin = '7.2.0'
+        version_core = '1.7.0'
+        version_constraint_layout = '2.1.4'
         version_glide = "4.8.0"
-        version_kotlin = "1.3.72"
-        version_lifecycle = "2.2.0"
+        version_kotlin = "1.6.21"
+        version_lifecycle = '2.4.1'
         version_moshi = "1.8.0"
-        version_navigation = "1.0.0"
+        nav_version = "2.4.2"
         version_retrofit = "2.9.0"
         version_recyclerview = "1.0.0"
     }
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$version_android_gradle_plugin"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
